force-app/main/default/objects/Portfolio_Skill__mdt/Portfolio_Skill__mdt.object-meta.xml
<CustomObject>
    <label>Portfolio Skill</label>
    <pluralLabel>Portfolio Skills</pluralLabel>
</CustomObject>