force-app/main/default/objects/Portfolio_Skill__mdt/fields/Category_Color__c.field-meta.xml
<CustomField>
    <fullName>Category_Color__c</fullName>
    <label>Category Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>