force-app/main/default/objects/Portfolio_Skill__mdt/fields/Proficiency__c.field-meta.xml
<CustomField>
    <fullName>Proficiency__c</fullName>
    <label>Proficiency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>