force-app/main/default/objects/Portfolio_Skill__mdt/fields/Proficiency_Percent__c.field-meta.xml
<CustomField>
    <fullName>Proficiency_Percent__c</fullName>
    <label>Proficiency Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>